@@ -60,6 +60,7 @@ v1.9.0 - xx xxx xxxx
         - Interface type "null".
         - Numeric values for reserved ports (see "ovs-ofctl" note above).
         - Tunnel Path MTU Discovery.
+        - CAPWAP tunnel support.
     - The data in the RARP packets can now be matched in the same way as the
       data in ARP packets.
 
